force-app/main/default/objects/Funding_Transaction__c/Funding_Transaction__c.object-meta.xml
<CustomObject>
    <description>This object is used to fund Funding Opportunties, or Funding Awards (this allows for obligations, and deobligations)</description>
    <label>Funding Transaction</label>
    <nameField>
        <displayFormat>FundTrans-{0}</displayFormat>
        <label>Funding Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>