force-app/main/default/objects/Funding_Transaction__c/fields/Funding_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Funding_Opportunity__c</fullName>
    <label>Funding Opportunity</label>
    <referenceTo>FundingOpportunity</referenceTo>
    <relationshipLabel>Funding Transactions</relationshipLabel>
    <relationshipName>Funding_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>