force-app/main/default/objects/Funding_Transaction__c/fields/Reasonfordeobligation__c.field-meta.xml
<CustomField>
    <fullName>Reasonfordeobligation__c</fullName>
    <inlineHelpText>What is the reason for this deobligation</inlineHelpText>
    <label>Reason for deobligation</label>
    <type>TextArea</type>
</CustomField>