force-app/main/default/objects/Funding_Transaction__c/fields/Type_of_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Transaction__c</fullName>
    <inlineHelpText>which objecf are we funding or defunding.</inlineHelpText>
    <label>Type of Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Award</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>